# firedroneRL

./: .gitignore  MANIFEST.in  README.md  check_obs.py  pyproject.toml  setup.cfg
UOAR-based-drone/: UOAR_drone_rl.py  run_smoke.py  test.py
analysis/: README.md  plot_all_figures.py  smoke_actor_check.py
drl-based-drone/: UOAR_drone_rl.py  ablation_eval.py  debug_eval.py  final_enviroment.py  final_environment.py
firedrone_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/: decision_map.npy  eval_metrics.csv  steps.csv  training_metrics.csv  updates.csv
logs/ablation_eval/: ablation_eval_s4.csv
rule-based-drone/: rulebaseddrone.py
search sim/: debug_run_s3.py  first_detect_matrix.csv  plot_summary.py  regenerate_summary.py  search_sim.py  search_summary.csv
uoar-drone-exploration/: README.md  requirements.txt  rulebaseddrone.py  setup.py  uoar_flat.py
uoar-drone-exploration/src/: main.py
uoar-drone-exploration/src/agents/: uoar_agent.py
uoar-drone-exploration/src/env/: uoar_env.py
uoar-drone-exploration/src/utils/: helpers.py
uoar_drone_rl/: __init__.py  app.py
wrapper/: __init__.py  app.py  cli.py
