[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firedrone-rl"
version = "0.1.0"
description = "UOAR-based drone RL training and environment"
readme = "README.md"
authors = [ { name = "aaccaa19" } ]
requires-python = ">=3.8"

dependencies = [
    "gymnasium",
    "numpy",
    "torch",
    "matplotlib",
    "pandas",
    "seaborn"
]

[project.urls]
"Homepage" = "https://github.com/aaccaa19/firedroneRL"

[project.scripts]
"firedrone-rl" = "uoar_drone_rl.cli:run"
