[metadata]
name = firedrone-rl
version = 0.1.0
description = UOAR-based drone RL training and environment
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    gymnasium
    numpy
    torch
    matplotlib

[options.entry_points]
console_scripts =
    firedrone-rl = uoar_drone_rl.cli:run
